--- a/templates/index.html
+++ b/templates/index.html
@@ -236,43 +236,49 @@
                         فرم‌های زیر برای ما ارسال کنید تا در اسرع وقت با شما تماس حاصل شود.</p>
                 </div>
                 <div class="col-md-4" dir="rtl">
-                    <div class="ct-form-item" data-type="industry" form-url="https://app.epoll.pro:443/2300425">
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <img src="{% static 'theme-ct/images/cog.png' %}" alt="">
-                            </div>
-                            <div class="col-lg-8 text-right">
-                                <h3>صنعت</h3>
-                                جهت ثبت درخواست کلیک کنید
+                    <a href="/login/#signup">
+                        <div class="ct-form-item" data-type="industry" form-url="https://app.epoll.pro:443/2300425">
+                            <div class="row">
+                                <div class="col-lg-4">
+                                    <img src="{% static 'theme-ct/images/cog.png' %}" alt="">
+                                </div>
+                                <div class="col-lg-8 text-right">
+                                    <h3>صنعت</h3>
+                                    جهت ثبت درخواست کلیک کنید
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-md-4" dir="rtl">
-                    <div class="ct-form-item" data-type="student" form-url="https://app.epoll.pro:443/2330350">
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <img src="{% static 'theme-ct/images/laboratory1.png' %}" alt="">
-                            </div>
-                            <div class="col-lg-8 text-right">
-                                <h3>پژوهشگر</h3>
-                                جهت ثبت درخواست کلیک کنید
+                    <a href="/login/#signup">
+                        <div class="ct-form-item" data-type="student" form-url="https://app.epoll.pro:443/2330350">
+                            <div class="row">
+                                <div class="col-lg-4">
+                                    <img src="{% static 'theme-ct/images/laboratory1.png' %}" alt="">
+                                </div>
+                                <div class="col-lg-8 text-right">
+                                    <h3>پژوهشگر</h3>
+                                    جهت ثبت درخواست کلیک کنید
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-md-4" dir="rtl">
-                    <div class="ct-form-item" data-type="teacher" form-url="https://app.epoll.pro:443/2327500">
-                        <div class="row">
-                            <div class="col-lg-4">
-                                <img src="{% static 'theme-ct/images/training1.png' %}" alt="">
-                            </div>
-                            <div class="col-lg-8 text-right">
-                                <h3>استاد</h3>
-                                جهت ثبت درخواست کلیک کنید
+                    <a href="/login/#signup">
+                        <div class="ct-form-item" data-type="teacher" form-url="https://app.epoll.pro:443/2327500">
+                            <div class="row">
+                                <div class="col-lg-4">
+                                    <img src="{% static 'theme-ct/images/training1.png' %}" alt="">
+                                </div>
+                                <div class="col-lg-8 text-right">
+                                    <h3>استاد</h3>
+                                    جهت ثبت درخواست کلیک کنید
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div id="Load" class="col-md-12">لطفا منتظر بمانید...</div>
                 <div id="action" class="col-md-12"></div>
