--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -54,11 +54,11 @@
                         <button type="submit" class="Enter-btn">ورود</button>
                         <hr>
                         <p class="new-user">
-                            کاربر جدید هستید؟ <a href="#" class="next-slide">عضویت</a>
+                            کاربر جدید هستید؟ <a href="#signup" class="next-slide">عضویت</a>
                         </p>
                     </form>
                 </div>
-                <div class="item">
+                <div class="item" id="signup">
                     <form method="post" action="" novalidate class="sign-up-ajax"
                           data-url="{% url 'chamran:signup_email' %}">
                         <h6 class="text-right">ساخت حساب کاربری</h6>
