comment researcher question video

--- a/researcher/templates/researcher/question.html
+++ b/researcher/templates/researcher/question.html
@@ -59,10 +59,10 @@
                                 پیشنهاد می‌شود جهت یادگیری «نحوه جستجوی هدفمند مقالات در بانک مقالات» ویدیوی زیر را
                                 مشاهده نمایید.
                             </p>
-                            <video width="550" height="350" controls>
-                                <source src="/media/VIDEO0041.mp4" type="video/mp4">
-                                Your browser does not support the video tag.
-                            </video>                            
+{#                            <video width="550" height="350" controls>#}
+{#                                <source src="/media/VIDEO0041.mp4" type="video/mp4">#}
+{#                                Your browser does not support the video tag.#}
+{#                            </video>                            #}
                             {% if not answered %}
                                 <p>
                                     اگر برای شروع این مرحله آماده هستید، کافی است روی دکمه زیر کلیک کنید.
