edit resume validation modal

--- a/expert/templates/expert/layouts/resume_validation.html
+++ b/expert/templates/expert/layouts/resume_validation.html
@@ -15,11 +15,27 @@
                             سامانه افزوده شوند.
                         </p>
                     </div>
-                    <div class="col-12">
-
+                    <div class="col-12 pt-4 pb-4">
+                        <div class="d-flex">
+                            <img class="rounded" src="{% static 'expert/img/profile.jpg' %}" alt="" style="width: 7rem">
+                            <div class="pr-4">
+                                <div class="pb-3 pt-2">
+                                    <span>نام و نام خانوادگی</span>
+                                    <span>سپهر متانت</span>
+                                </div>
+                                <div class="pb-3">
+                                    <span>دانشگاه</span>
+                                    <span>علوم پزشکی تهران</span>
+                                </div>
+                                <div>
+                                    <span>گروه هیئت علمی</span>
+                                    <span>سپهر متانت</span>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-12">
-                        <div class="project-techniques">
+                        <div class="custom-techniques">
                             <div>
                                 <span>تکنیک </span><span>تکنیک </span><span>تکنیک </span><span>تکنیک </span>
                             </div>
