--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1041,6 +1041,11 @@ label {
     text-align: right;
 }
 
+label[for='id_key_words'] {
+    z-index: 5;
+    /*font-weight: 600;*/
+}
+
 label.full-focus-out:after {
     content: '';
     position: absolute;
@@ -2063,7 +2068,7 @@ span.star-warning:after {
 
 .label-check-radio + label {
     position: absolute;
-    top: -10px;
+    top: 0;
     padding: 5px;
     min-width: 100px;
     text-align: center;
@@ -2073,6 +2078,7 @@ span.star-warning:after {
     border: 1px solid #bdbdbd85;
     transition: all ease-in-out 0.3s;
     background-color: #fefefe;
+    margin: 0;
 }
 
 .label-check-radio + label:hover, .label-check-radio:checked + label {
@@ -2511,13 +2517,18 @@ span.title-back {
     position: relative;
 }
 
-.project-info-tabs {
+.project-info-tabs,
+.nav-tabs-container {
     border-top-right-radius: 0.25em;
     /* border-bottom-right-radius: 0.25em; */
     /* padding: 2px; */
     width: 100%;
     /* margin-bottom: 11px; */
     border-bottom: 1px solid #00000033;
+}
+
+.nav-tabs-container .nav-tabs {
+    border-bottom: none;
 }
 
 .project-info-content {
@@ -2531,12 +2542,12 @@ span.title-back {
 
 }
 
-.nav-pills {
+.nav-pills, .nav-tabs-container .nav-tabs {
     display: block !important;
 }
 
 @media (max-width: 767px) {
-    .nav-pills {
+    .nav-pills, .nav-tabs-container .nav-tabs {
         position: relative;
         overflow: hidden;
         white-space: nowrap;
@@ -2545,7 +2556,8 @@ span.title-back {
     }
 }
 
-.nav-pills > .nav-link {
+.nav-pills > .nav-link,
+.nav-tabs-container .nav-tabs .nav-item {
     position: relative;
     display: inline-block;
     background-color: transparent;
@@ -2554,6 +2566,7 @@ span.title-back {
     padding: 8px 10px;
     margin: 0 2px -2px 0;
     border-radius: 0;
+    border: none !important;
     /* border-bottom: 2px solid #737373; */
     min-width: 75px;
     text-align: center;
@@ -2565,21 +2578,24 @@ span.title-back {
 }
 
 @media (max-width: 767px) {
-    .nav-pills > .nav-link {
+    .nav-pills > .nav-link,
+    .nav-tabs-container .nav-tabs .nav-item {
         min-width: 50px;
         display: inline-block;
         overflow-x: auto;
     }
 }
 
-.nav-pills > .nav-link.active, .nav-pills > .nav-link:hover {
+.nav-pills > .nav-link.active, .nav-pills > .nav-link:hover,
+.nav-tabs-container .nav-tabs .nav-item.active, .nav-tabs-container .nav-tabs .nav-item:hover {
     background-color: transparent;
     /*font-weight: 800;*/
     color: #3ccd1c !important;
     cursor: pointer;
 }
 
-.nav-pills > .nav-link:after {
+.nav-pills > .nav-link:after,
+.nav-tabs-container .nav-tabs .nav-item:after {
     content: '';
     position: absolute;
     width: 0;
@@ -2603,7 +2619,8 @@ span.title-back {
     z-index: 1;
 }
 
-.nav-pills > .nav-link.active:after, .nav-pills > .nav-link:hover:after {
+.nav-pills > .nav-link.active:after, .nav-pills > .nav-link:hover:after,
+.nav-tabs-container .nav-tabs .nav-item.active:after, .nav-tabs-container .nav-tabs .nav-item:hover:after {
     width: 100%;
 }
 
@@ -3096,6 +3113,22 @@ div.no-project > span.disable-border-button {
     font-weight: 500;
     font-size: 11px;
     padding: 0;
+}
+
+.box .box-header button.btn-add-on {
+    border: 1px solid #3CCD1C;
+    background-color: #ffffff;
+    border-radius: 30px;
+    padding: 4px 10px;
+    font-size: 0.9em;
+    color: #3ccd1c;
+}
+
+.box .box-header button.btn-add-on:hover,
+.box .box-header button.btn-add-on:focus {
+    border: 1px solid #3CCD1C;
+    background-color: #3CCD1C;
+    color: #ffffff;
 }
 
 .message-expand {
@@ -3622,7 +3655,7 @@ div.no-project > span.disable-border-button {
     border-radius: 0;
 }
 
-.box .box-body .project-techniques span.show-all:hover , .custom-techniques span.show-all:hover{
+.box .box-body .project-techniques span.show-all:hover, .custom-techniques span.show-all:hover {
     cursor: pointer;
 }
 
@@ -3651,6 +3684,7 @@ a.top-button {
     color: #3CCD1C;
     font-size: 30px;
     border: 1px solid #3CCD1C;
+    z-index: 999;
 }
 
 a.top-button:hover {
@@ -4838,7 +4872,7 @@ img.center-head {
 }
 
 .modal-resume .technique-item .technique-name:hover {
-        position: absolute;
+    position: absolute;
     overflow: initial;
     background-color: #fff;
     width: fit-content;
