--- a/expert/templates/expert/userInfo.html
+++ b/expert/templates/expert/userInfo.html
@@ -223,7 +223,7 @@
                         <div class="card box flow-root-display w-100">
                             <div class="box-header text-right">
                                 <h6>کلیدواژه</h6>
-                                <button class="btn-add-on">
+                                <button type="button" class="btn-add-on" data-toggle="modal" data-target="#waitToGet">
                                     <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus"
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg">
@@ -390,7 +390,7 @@
                         <div class="card box flow-root-display w-100">
                             <div class="box-header text-right">
                                 <h6>مقالات</h6>
-                                <button class="btn-add-on">
+                                <button type="button" class="btn-add-on" data-toggle="modal" data-target="#waitToGet">
                                     <svg width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-plus"
                                          fill="currentColor"
                                          xmlns="http://www.w3.org/2000/svg">
