--- a/industry/templates/industry/layouts/initial_information.html
+++ b/industry/templates/industry/layouts/initial_information.html
@@ -39,12 +39,12 @@
                                     <div class="form-group RandD__form-item">
                                         <label for="id_registration_number">شماره ثبت</label>
                                         {% if RandD_form.fullname.errors %}
-                                            {% render_field RandD_form.fullname class+="w-100 error" %}
+                                            {% render_field RandD_form.registration_number class+="w-100 error" %}
                                         {% else %}
-                                            {% render_field RandD_form.fullname class+="w-100" %}
+                                            {% render_field RandD_form.registration_number class+="w-100" %}
                                         {% endif %}
                                         <div class="error">
-                                            {% render_field RandD_form.fullname.errors %}
+                                            {% render_field RandD_form.registration_number.errors %}
                                         </div>
                                     </div>
                                     <div class="form-group RandD__form-item">
