add project setting icon to waiting projects

--- a/industry/templates/industry/index.html
+++ b/industry/templates/industry/index.html
@@ -63,7 +63,7 @@
                     <div class="card box flow-root-display w-100">
                         <div class="box-header">
                             <h6>{{ project.project_form.project_title_persian }}</h6>
-                            <div class="project-setting">
+                            <div class="project-setting" data-toggle="modal" data-target="#projectSetting">
                                 <i class="fas fa-cog"></i>
                             </div>
                             <span class="active-status">
